--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,6 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation 'com.google.firebase:firebase-auth:16.0.1'
-
+    implementation 'com.google.firebase:firebase-database:16.0.1'
 }
 apply plugin: 'com.google.gms.google-services'
