--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".signUpActivity" />
+        <activity android:name=".homeActivity" />
+        <activity android:name=".about" />
+        <activity android:name=".daftarBuku" />
+        <activity android:name=".addBookActivity" />
+        <activity android:name=".pinjamBukuActivity" />
+        <activity android:name=".profile" />
+        <activity android:name=".homeActivityFragmen"></activity>
     </application>
 
 </manifest>
